# SDL2Hello

./: .gitignore  LICENSE  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/ambits/org/sdlhello/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  SDL  SDL_image  main.cpp
app/src/main/java/ambits/org/sdlhello/: SDLHello.java
app/src/main/java/org/libsdl/app/: SDLActivity.java
app/src/main/res/layout/: activity_sdlhello.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/ambits/org/sdlhello/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
